# vcf2csv

./: .gitignore  CMakeLists.txt  ISSUES.md  README.md
cmake/: compile_options.cmake
src/: CMakeLists.txt  csv.cpp  csv.hpp  main.cpp  quoted_printable.cpp  quoted_printable.hpp  vcard.hpp  vcf.cpp  vcf.hpp  vcf_iterator.hpp
src/meta/: any.hpp
test/: CMakeLists.txt  main.cpp  quoted_printable.cpp  test.cpp  vcf.cpp  vcf_iterator.cpp
